# ArMiddleware

./: .travis.yml  CMakeLists.txt  README.md
src/Ar/: Common.h  Messages.h
src/Ar/Middleware/: ActiveObject.cpp  ActiveObject.h  ActiveThread.cpp  ActiveThread.h  ActiveThreadAddresses.cpp  ActiveThreadAddresses.h  ActiveThreadCore.cpp  ActiveThreadCore.h  IMessage.h  JsonParser.cpp  JsonParser.h  LogFlag.h  LogLevel.h  Logger.cpp  Logger.h  MessageIds.h  SharedPtr.h  Singleton.h  Timer.cpp  Timer.h  Utils.h
tests/: Smoke.cpp
tests/Ar/Middleware/: ActiveObject.cpp  ActiveThread.cpp  JsonParser.cpp
